# Qt5-Sample---CMake

./: CMakeLists.txt  LICENSE  readme.md
includes/: mainwindow.h
src/: mainwindow.cpp
